# claude-session-recorder

./: .gitignore  LICENSE  README.md  config.json  install.sh  pyproject.toml  uninstall.sh
.claude-plugin/: plugin.json
examples/: settings.json
hooks/: hooks.json  pre_compact.py  session_start.py  stop.py
hooks/lib/: __init__.py  context.py  models.py  storage.py  transcript.py
tests/: test_context.py  test_storage.py  test_transcript.py
